--- a/index.html
+++ b/index.html
@@ -31,4 +31,4 @@ WELCOME TO STARBUCKS ON TUESDAY!
   
   <BR>
     
-This is new as of 9/15/2020 The Lockdown continues...
+This is new as of 1117//2020 The Lockdown continues...Wave 2 continues
